prqlc/prqlc/src/semantic/resolver/snapshots/prqlc__semantic__resolver__test__append_union_different_tables.snap
---
source: prqlc/prqlc/src/semantic/resolver/mod.rs
expression: final_lineage
---
columns:
  - Single:
      name:
        - employees
        - name
      target_id: 141
      target_name: ~
  - Single:
      name:
        - employees
        - salary
      target_id: 142
      target_name: ~
inputs:
  - id: 139
    name: employees
    table:
      - default_db
      - employees
  - id: 128
    name: managers
    table:
      - default_db
      - managers
