prqlc/prqlc/src/semantic/resolver/snapshots/prqlc__semantic__resolver__test__frames_and_names-2.snap
---
source: prqlc/prqlc/src/semantic/resolver/mod.rs
expression: "resolve_lineage(r#\"\n            from table_1\n            join customers (==customer_no)\n            \"#).unwrap()"
---
columns:
  - All:
      input_id: 8
      except: []
  - All:
      input_id: 5
      except: []
inputs:
  - id: 8
    name: table_1
    table:
      - default_db
      - table_1
  - id: 5
    name: customers
    table:
      - default_db
      - customers
