prqlc/prqlc/src/semantic/resolver/snapshots/prqlc__semantic__resolver__test__functions_1.snap
---
source: prqlc/prqlc/src/semantic/resolver/mod.rs
expression: "resolve_derive(r#\"\n            let subtract = a b -> a - b\n\n            from employees\n            derive {\n                net_salary = subtract gross_salary tax\n            }\n            \"#).unwrap()"
---
- RqOperator:
    name: std.sub
    args:
      - Ident:
          - this
          - employees
          - gross_salary
        span: "1:128-140"
      - Ident:
          - this
          - employees
          - tax
        span: "1:141-144"
  span: "1:119-144"
  alias: net_salary
  ty:
    kind:
      Union:
        - - ~
          - kind:
              Primitive: Int
            span: "0:970-973"
            name: ~
        - - ~
          - kind:
              Primitive: Float
            span: "0:977-982"
            name: ~
        - - ~
          - kind:
              Primitive: Timestamp
            span: "0:986-995"
            name: ~
        - - ~
          - kind:
              Primitive: Date
            span: "0:999-1003"
            name: ~
    span: "0:970-1003"
    name: ~
