prqlc/prqlc/src/semantic/resolver/snapshots/prqlc__semantic__resolver__test__functions_nested.snap
---
source: prqlc/prqlc/src/semantic/resolver/mod.rs
expression: "resolve_derive(r#\"\n            let lag_day = x -> s\"lag_day_todo({x})\"\n            let ret = x dividend_return ->  x / (lag_day x) - 1 + dividend_return\n\n            from a\n            derive (ret b c)\n            \"#).unwrap()"
---
- RqOperator:
    name: std.add
    args:
      - RqOperator:
          name: std.sub
          args:
            - RqOperator:
                name: std.div_f
                args:
                  - Ident:
                      - this
                      - a
                      - b
                  - SString:
                      - String: lag_day_todo(
                      - Expr:
                          expr:
                            Ident:
                              - this
                              - a
                              - b
                          format: ~
                      - String: )
              ty:
                kind:
                  Union:
                    - - ~
                      - kind:
                          Primitive: Int
                        span: "0:779-782"
                        name: ~
                    - - ~
                      - kind:
                          Primitive: Float
                        span: "0:786-791"
                        name: ~
                span: "0:779-791"
                name: ~
            - Literal:
                Integer: 1
              ty:
                kind:
                  Primitive: Int
                span: ~
                name: ~
        ty:
          kind:
            Union:
              - - ~
                - kind:
                    Primitive: Int
                  span: "0:970-973"
                  name: ~
              - - ~
                - kind:
                    Primitive: Float
                  span: "0:977-982"
                  name: ~
              - - ~
                - kind:
                    Primitive: Timestamp
                  span: "0:986-995"
                  name: ~
              - - ~
                - kind:
                    Primitive: Date
                  span: "0:999-1003"
                  name: ~
          span: "0:970-1003"
          name: ~
      - Ident:
          - this
          - a
          - c
  ty:
    kind:
      Union:
        - - ~
          - kind:
              Primitive: Int
            span: "0:893-896"
            name: ~
        - - ~
          - kind:
              Primitive: Float
            span: "0:900-905"
            name: ~
        - - ~
          - kind:
              Primitive: Timestamp
            span: "0:909-918"
            name: ~
        - - ~
          - kind:
              Primitive: Date
            span: "0:922-926"
            name: ~
    span: "0:893-926"
    name: ~

